data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4033.wast
;; 2. **Insufficient Operands on Stack**:    - Construct a scenario where `call_indirect` is made with a type signature requiring more operands than present on the stack.    - Constraint Check: Validate operand stack handling and verify the expected number of arguments are consumed.    - Stack Corruption Relation: This can lead to operand stack underflow, causing subsequent instructions to fail.

 ;; // (assert_invalid ... description omitted)
(assert_invalid
  (module
    (type (func (param i32 i32)))
    (table 0 funcref)
    (func $insufficient-operands
      (i32.const 42) ;; one operand provided instead of two
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch"
)